# ContactScraper

./: .gitignore  README.md  cities.txt~  pyproject.toml  requirements.txt  scraper_multi_gui.py  scraper_playwright.py  scraper_v3.py  telephone_list.txt
