[project]
name = "scraper-day01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "colorama>=0.4.6",
    "ipython>=9.6.0",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "tk>=0.1.0",
    "ttkbootstrap>=1.18.0",
]
